Implementing download and upload of challenges from and to the CEPHALIX server. Make inserting new question more confortable.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,4 @@
 {
-    "Add one Attachment":"Einen Anhang einfügen",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -20,12 +19,14 @@
     "Add institute": "Institution anlegen",
     "Add new DHCP Option/Statement": "Neue DHCP Option oder Anweisung erstellen",
     "Add new announcement": "Neue Nachricht erstellen",
+    "Add new answer": "Neue Antwort",
     "Add new contact": "Neuen Kontakt erstellen",
     "Add new faq": "Neues FAQ erstellen",
     "Add new license": "Neue Lizenz eintragen",
     "Add new room access status": "Neue Raumzugriffsregel anlegen",
     "Add new task": "Neue Aufgabe erstellen",
     "Add notice": "Notiz hinzufügen",
+    "Add one Attachment": "Einen Anhang einfügen",
     "Add outgoing firewall rule": "Ausgehende Firewall-Regel hinzufügen",
     "Add outgoing rule": "Ausgehende Regel erstellen",
     "Add printer": "Drucker anlegen",
@@ -49,6 +50,7 @@
     "Apply an action on all devices in room": "Eine Aktion an allen Geräten im Raum anwenden.",
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
+    "Assign and start challenge.": "Test zuweisen und starten.",
     "Available ACLs": "Weitere ACLs:",
     "Available Printers": "Weitere Drucker:",
     "Available groups:": "Weitere Gruppen:",
@@ -61,6 +63,8 @@
     "Boot configuration was saved successfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
     "Cancel": "Abbrechen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
+    "Check all questions and answers for accuracy! We do not guarantee that the solutions are correct.": "Überprüfen Sie alle Fragen und Antworten auf die Richtigkeit! Wir geben keine Garantie dafür, dass die Lösungen korrekt sind.",
+    "Close": "Schließen",
     "Collect files": "Dateien einsammeln",
     "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus den Exportverzeichnissen der angemeldeten Benutzer oder der Workstationsbenutzer einsammeln.",
     "Comma separated list": "Elemente mit Komma trennen!",
@@ -93,6 +97,7 @@
     "DNS server configuration was written successfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
     "Default Printer": "Standarddrucker",
     "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählten Server konfigurieren",
+    "Delete": "Löschen",
     "Delete hwconf": "Gerätekonfiguration löschen",
     "Delete institute": "Institution löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
@@ -149,6 +154,9 @@
     "Firewall incoming access rule  was set successfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
     "Firewall outgoing access rule  was set successfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
     "For students and guest users the will be cleaned up anyway.": "Für Schüler und Gastbenutzer wird <i>Export</i> immer geleert.",
+    "Get challenge questions from CEPHALIX server to the selected subject.": "Testfragen vom CEPHALIX-Server für das ausgewählte Fach herunterladen.",
+    "Get challenge questions from your server to the selected subject.": "Testfragen Ihrem Server für das ausgewählte Fach herunterladen.",
+    "Get challenges from CEPHALIX server to the selected subject.": "Tests vom CEPHALIX-Server für das ausgewählte Fach herunterladen.",
     "Get corresponding announcements": "Aktuelle Nachrichten",
     "Get corresponding contacts": "Veröffentlichte Kontakte",
     "Get corresponding faqs": "Veröffentlichte FAQs",
@@ -188,6 +196,7 @@
     "List of owned contacts": "Eigene Kontakte",
     "List of owned faqs": "Eigene FAQs",
     "List of owned tasks": "Eigene Aufgaben",
+    "List of questions": "Liste vorhandener Fragen",
     "List of the results:": "Liste der Rückmeldungen",
     "Loading data ...": "Daten werden geladen ...",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
@@ -211,6 +220,7 @@
     "Manage software installation sets:": "Installationssets verwalten",
     "Manage system acls for groups and users": "ACLs von Gruppen und Benutzern verwalten",
     "Manage system acls of the selected object:": "ACLs des gewählten Objekts verwalten:",
+    "Manage the archived results of this challenge.": "Archivierte Testergebnisse verwalten.",
     "Manage tickets": "Tickets verwalten",
     "Manage user imports": "Benutzerimporte verwalten",
     "Manage users": "Benutzer verwalten",
@@ -227,6 +237,7 @@
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
+    "More right answers": "Mehrere richtige Antworten",
     "Multicast cloning of": "Multicast Klonen von",
     "My Devices": "Eigene Geräte",
     "My groups": "Eigene Gruppen",
@@ -235,8 +246,10 @@
     "MyGroups": "Meine Gruppen",
     "NODEVICE": "Kein Gerät",
     "New password": "Neues Passwort",
+    "New question": "Neue Frage",
     "New quota in MB": "Neuer Quota in MB",
     "No default printer": "Kein Standarddrucker",
+    "One right answer": "Eine richtige Antwort",
     "Outgoing rules": "Ausgehende Regeln",
     "Overview": "Übersicht",
     "Own Black List": "Eigene Black-Liste",
@@ -259,6 +272,7 @@
     "Profile": "Profil",
     "Protocol": "Protokoll",
     "Proxy basic configuration was written successfully.": "Proxykonfiguration wurde erfolgreich geschrieben.",
+    "Questions from the CEPHALIX Server": "Fragen vom CEPHALIX Server",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
@@ -284,6 +298,7 @@
     "Rooms were imported successfully.": "Räume wurden erfolgreich importiert.",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
+    "Save changes": "Änderungen speichern",
     "Security": "Sicherheit",
     "Select DHCP Option/Statement": "DHCP Option oder Anweisung wählen",
     "Select OS": "Betriebssystem auswählen",
@@ -296,8 +311,11 @@
     "Select a room": "Raum wählen",
     "Select an action": "Aktion wählen",
     "Select an addon": "Zusatzmodul wählen",
+    "Select from existing questions!": "Aus vorhandenen Fragen wählen!",
     "Select network card": "Netzwerkkarte wählen",
     "Select objects": "Objekte auswählen",
+    "Select one or more questions!": "Eine oder mehrere Fragen wählen!",
+    "Select one teaching subject": "Wählen Sie ein Schulfach aus!",
     "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichtbare Felder auswählen.",
     "Select the groups into  the user must be added.": "Gruppen markieren, in denen der Benutzer Mitglied werden soll.",
@@ -316,6 +334,7 @@
     "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
     "Settings": "Einstellungen",
+    "Show actual results": "Zwischenergebnisse anzeigen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
@@ -327,6 +346,7 @@
     "Start time": "Gestartet",
     "Status of the Services": "Status der Serverdienste",
     "Status of the institutes": "Status der Server",
+    "Stop and evaluate challenge and archive the results.": "Test anhalten, auswerten und Ergebnisse archivieren.",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
     "Students": "Schüler",
@@ -362,12 +382,15 @@
     "This group must not be deleted.": "Diese Gruppe darf nicht gelöscht werden.",
     "This is a printer device with defined printer queues. You have to delete this devices via printer management.": "Das ist ein Drucker mit zugewiesenen Warteschlangen. Bitte entfernen Sie es in der Druckerverwaltung.",
     "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden.",
+    "Title": "Titel",
     "To login": "Anmelden",
     "Toggle yes no": "umschalten",
+    "Type": "Typ",
     "US": "Entfernen geplant",
     "Uid contains not allowed characters.": "Benutzername enthält nicht erlaubte Zeichen.",
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
+    "Upload the test to CEPHALIX Server.": "Test auf den CEPHALIX-Server hochladen.",
     "Used": "Benutzt",
     "User": "Benutzer",
     "User name is not unique.": "Benutzername wird schon verwendet.",
@@ -627,6 +650,7 @@
     "sysadminsOnly": "Nur durch Systemadministratoren",
     "tasks": "Aufgaben",
     "teachers": "Lehrer",
+    "teachingSubject": "Schulfach",
     "telephone": "Telefonnummer",
     "test": "Als Test ausführen",
     "text": "Text",
