Remove direct closing of tickets. Enhance readability of alert widget on object actions.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -74,6 +74,7 @@
     "Contacts": "Kontakte",
     "Content of the log": "Inhalt der Logdatei",
     "Count of accounts": "Anzahl der Benutzerkonten",
+    "Count of selected objects: ": "Anzahl der ausgewählten Objekte: ",
     "Create AdHoc-Room": "AdHoc-Raum für die Gruppe anlegen",
     "Create a new announcement": "Neue Nachricht erstellen",
     "Create a new contact": "Neuen Kontak erstellen",
