Implementing CRANIX 2FA

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,24 @@
 {
+    "Insert you email address":"Tragen Sie Ihre E-Mailadresse ein",
+    "You can modify all paramater later.":"Sie können später alle Parameter ändern.",
+    "Seconds":"Sekunden",
+    "Hours":"Stunden",
+    "Type of 2FA":"Typ von zweifaktor Authorisierung",
+    "Manage CRANIX 2FA":"Cranix zweifaktor Authorisierung verwalten",
+    "Serial/Address":"Serial/Adresse",
+    "timeStep":"Pin Gültigkeit",
+    "validHours":"Sessiongültigkeit",
+    "Configure your 2FA envinroment":"Konfigurieren Sie Ihre zweifaktor Authorisierung",
+    "Download the privacyIDEA or Google Autenticator app to your mobil device.":"Laden Sie den privacyIDEA oder Google Autenticator App auf Ihr mobiles Gerät!",
+    "Generate a QRCode on this page.":"Erstellen Sie einen QRCode auf dieser Seite.",
+    "Import (scan) the QRCode with your Autenticator app.":"Importieren (scannen) Sie das QRCode mit Ihrem Autenticator App!",
+    "If you have trouble with your app delete the QRCode and generate it again.":"Haben Sie Probleme mit Ihrem App, löschen Sie das QRCode und erstellen Sie ein neues!",
+    "If you have lost your mobile device delete the QRCode and generate it again.":"Haben Sie Ihr Mobilgerät verloren, löschen Sie das QRCode und erstellen Sie ein neues!",
+    "After you have created your QRCode you can only modify the how long a 2FA session is available.":"Nachdem der QRCode generiert wurde, können Sie nur noch die Gültigkeit eines 2FA Sessions ändern.",
+    "Select the type of your CRANIX 2FA Type":"Wählen Sie den 2FA Typ",
+    "Set the validity of a PIN in seconds":"Setzen Sie die Gültigkeit eines Pins in Sekunden",
+    "Set the validity of a 2FA session in hours":"Setzen Sie die Gültigkeit eines Pins in Stunden",
+    "It is recomended to setup all 2FA types":"Es ist  empfohlen alle 2FA Typen zu konfigurieren.",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
