--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -159,6 +159,7 @@
     "Firewall incoming access rule  was set successfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
     "Firewall outgoing access rule  was set successfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
     "For students and guest users the will be cleaned up anyway.": "Für Schüler und Gastbenutzer wird <i>Export</i> immer geleert.",
+    "Generate QRCode": "QRCode erstellen",
     "Generate a QRCode on this page.": "Erstellen Sie einen QRCode auf dieser Seite.",
     "Get challenge questions from CEPHALIX server to the selected subject.": "Testfragen vom CEPHALIX-Server für das ausgewählte Fach herunterladen.",
     "Get challenge questions from your server to the selected subject.": "Testfragen Ihrem Server für das ausgewählte Fach herunterladen.",
@@ -272,6 +273,7 @@
     "Package": "Paket",
     "Packages": "Pakete",
     "Picture size": "Bildgröße",
+    "Please note that you cannot delete the 2FA configuration that you used to log in yourself.": "Bitte beachten Sie, dass man die 2FA-Konfiguration, die man zur Anmeldung benutzt hat nicht selber löschen kann.",
     "Please select at last one object!": "Bitte mindestens ein Objekt markieren!",
     "Positive lists": "Positiv-Listen",
     "Post file into the Import directory of the logged on users or of the workstation users.": "Verteile die Datei(en) in die Importverzeichnisse der angemeldeten Benutzer oder der Workstationsbenutzer.",
@@ -690,7 +692,7 @@
     "users": "Benutzer",
     "uuid": "Kennung (UUID)",
     "validFrom": "Gültig ab",
-    "validHours": "Sessiongültigkeit",
+    "validHours": "Gültigkeit einer Sitzung",
     "validUntil": "Gültig bis",
     "validity": "Gültigkeit",
     "value": "Wert",
