Adapt to new db modell

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -591,8 +591,8 @@
     "okMessageDuration": "Dauer der Erfolgsmeldungen in Sekunden",
     "open": "öffnen",
     "other": "Andere Institution",
-    "ownerId": "Besitzer",
-    "ownerName": "Besitzer",
+    "creatorId": "Besitzer",
+    "creatorName": "Besitzer",
     "password": "Passwort",
     "phone": "Telefon",
     "place": "Platz",
@@ -611,7 +611,7 @@
     "rating": "Beurteilung",
     "realSchool": "Realschule",
     "reboot": "neu starten",
-    "recDate": "Erstell am:",
+    "created": "Erstell am:",
     "regCode": "Registrierungscode",
     "reminder": "Erinnerung",
     "removeProfiles": "Windows-Profile löschen",
