--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -543,7 +543,7 @@
     "rating": "Rating",
     "realSchool": "Real School",
     "reboot": "Reboot",
-    "recDate": "Recording Date",
+    "created": "Recording Date",
     "regCode": "Registration Code",
     "reminder": "Reminder",
     "removeProfiles": "Remove Profiles",
