--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,9 +1,44 @@
 {
+    "Edit event":"Ereignis bearbeiten",
+    "Select users for the event":"Benutzer wählen",
+    "Select groups for the event":"Gruppen wählen",
+    "Select room for the event":"Raum wählen",
+    "Add new event":"Neues Ereignis erstellen",
+    "Select Calendars to show":"Darzustellende Kalender wählen",
+    "Select groups calendars":"Gruppenkalender wählen",
+    "Select room calendars":"Raumkalender wählen",
+    "Private Events":"Private Ereignisse",
+    "Individual Events":"Persönlich Ereignisse/Einladungen",
+    "allDay":"Ganztägig",
+    "From":"Beginn",
+    "Until":"Ende",
+    "Recurring":"Wiederholen",
+    "Freq":"Wiedeholungsziklus",
+    "Interval":"Intervall",
+    "Count":"Anzahl der Wiederholungen",
+    "Weekday":"Wochentag",
+    "Month":"Monat",
+    "End Date":"Ende der Wiederholungen",
+    "WEEKLY":"wöchentlich",
+    "YEARLY":"jährlich",
+    "MONTHLY":"monatlich",
+    "DAYLY":"täglich",
+    "HOURLY":"stündlich",
+    "MINUTELY":"minütlich",
+    "year":"Jahr",
     "today":"heute",
     "month":"Monat",
     "week": "Woche",
     "list": "Liste",
     "day": "Tag",
+    "MO":"Montag",
+    "TU":"Dienstag",
+    "WE":"Mittwoch",
+    "TH":"Donnerstag",
+    "FR":"Freitag",
+    "SA":"Samstag",
+    "SU":"Sonntag",
+    "Calendar":"Kalender",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
