Fix handling recurring until date. Improve mobile view.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "If no items are seleceted all events are showed":"Wird nichts ausgewählt, werden alle Ereignisse gezeigt.",
     "Edit event":"Ereignis bearbeiten",
     "Select users for the event":"Benutzer wählen",
     "Select groups for the event":"Gruppen wählen",
