Fix read only attributes modified, created, startIP, networkMask. Fix editing devices. Enhance translation.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,7 @@
 {
+    "modified":"geändert",
+    "startIP":"Erste IP-Adresse",
+    "netMask":"Netzwerkmaske",
     "If no items are seleceted all events are showed":"Wird nichts ausgewählt, werden alle Ereignisse gezeigt.",
     "Edit event":"Ereignis bearbeiten",
     "Select users for the event":"Benutzer wählen",
