Inital version of PTM handling

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "You can not create event in the past.":"Ereignisse können nur in der Zukunft erstellt werden.",
     "modified":"geändert",
     "startIP":"Erste IP-Adresse",
     "netMask":"Netzwerkmaske",
