Now we can create parents ptms, show the events, register rooms and events.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,23 @@
 {
+    "Parents":"Eltern",
+    "PTM":"Sprechtag",
+    "Requests":"Anfragen",
+    "Teacher":"Lehkraft",
+    "Teachers":"Lehkraft",
+    "Time":"Zeitpunkt",
+    "Event Registrations":"Terminübersicht des Sprechtages am:",
+    "Edit parent teacher meeting":"Sprechtag bearbeiten",
+    "Create parent teacher meeting":"Sprechtag anlegen",
+    "Duration of a session.":"Zeiteinheit",
+    "Start Parent Registration":"Anmeldung startet am:",
+    "End Parent Registration":"Anmeldung endet am:",
+    "Select room for the PTM":"Wählen Sie einen Raum für den Sprechtag",
+    "Select teacher for the PTM":"Wählen Sie Lehrkraft für den Sprechtag",
+    "Register parent for the event":"Registrieren Sie Eltern für den Termin",
+    "Select parent for the event":"Wählen Sie Eltern für den Termin",
     "You can not create event in the past.":"Ereignisse können nur in der Zukunft erstellt werden.",
+    "Register yourself to an event":"Registrieren Sie sich für einen Termin.",
+    "Select your child for the event":"Wählen Sie das betroffene Kind",
     "modified":"geändert",
     "startIP":"Erste IP-Adresse",
     "netMask":"Netzwerkmaske",
