Enhance translation. Enhance select PTMs Enhance list by teacher.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,18 @@
 {
+    "blocked":"gesperrt",
+    "free":"frei",
+    "Registrations":"Anmeldungen",
+    "Block":"blockieren",
+    "Notices":"Notizen",
+    "Upcoming PTMs":"Kommende Sprechtage",
+    "Select children for the parent":"Schüler für Eltern wählen",
+    "Select template for room reservation":"Wählen Sie ein Template für die Raumbelegung",
+    "emailAddress":"Emailadresse",
+    "telefonNumber":"Telefonnummer",
+    "Select classes for the PTM":"Klassen für den Sprechtag",
+    "classes are selected": "Klassen sind ausgewählt",
+    "Select PTM":"Sprechtag wählen",
+    "Former PTMs":"Frühere Sprechtage",
     "Parents":"Eltern",
     "PTM":"Sprechtag",
     "Requests":"Anfragen",
@@ -21,7 +35,7 @@
     "modified":"geändert",
     "startIP":"Erste IP-Adresse",
     "netMask":"Netzwerkmaske",
-    "If no items are seleceted all events are showed":"Wird nichts ausgewählt, werden alle Ereignisse gezeigt.",
+    "If no items are selected all events are showed":"Wird nichts ausgewählt, werden alle Ereignisse gezeigt.",
     "Edit event":"Ereignis bearbeiten",
     "Select users for the event":"Benutzer wählen",
     "Select groups for the event":"Gruppen wählen",
@@ -434,6 +448,7 @@
     "Stop and evaluate challenge and archive the results.": "Test anhalten, auswerten und Ergebnisse archivieren.",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
+    "Student": "Schüler",
     "Students": "Schüler",
     "Support request '%s' was created with ticket number '%s'. Answer will be sent to '%s'.": "Die Supportanfrage '%s' wurde mit der Nummer '%s' erstellt. Antwort wird an '%s' gesendet.",
     "Support request '%s' was not created. The reason is:'%s'": "Die Supportanfrage '%s' konnte nicht erstellt werden. Der Grund: '%s'",
