Make event list most confortable

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -22,7 +22,7 @@
     "Event Registrations":"Terminübersicht des Sprechtages am:",
     "Edit parent teacher meeting":"Sprechtag bearbeiten",
     "Create parent teacher meeting":"Sprechtag anlegen",
-    "Duration of a Session.":"Zeiteinheit",
+    "Duration of a Session":"Zeiteinheit",
     "Start Parent Registration":"Anmeldung startet am:",
     "End Parent Registration":"Anmeldung endet am:",
     "Select room for the PTM":"Wählen Sie einen Raum für den Sprechtag",
