Now teachers can also register students for events.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,6 @@
 {
+    "Register student for the event":"Schüler anmelden",
+    "Select student for the event":"Einen Schüler wählen",
     "blocked":"gesperrt",
     "free":"frei",
     "Registrations":"Anmeldungen",
