--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "Search for":"Suche nach",
     "Register student for the event":"Schüler anmelden",
     "Select student for the event":"Einen Schüler wählen",
     "blocked":"gesperrt",
