Refresh changes every 3 seconds. Do not allow change of start and end time if rooms are already reserved. Implementing realasing PTMs.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+    "Released":"Veröffentlicht",
     "Date":"Datum",
     "Search for":"Suche nach",
     "Register student for the event":"Schüler anmelden",
