Do not allow registration after registration ended. Do not allow room change after registration was started.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,6 @@
 {
+    "Registration started. No change is allowed.":"Anmeldung gestartet. Änderungen sind nicht mehr erlaubt.",
+    "Registration closed":"Anmeldungszeit abgelaufen.",
     "Released":"Veröffentlicht",
     "Date":"Datum",
     "Search for":"Suche nach",
